--- a/AppSource/project_raco/android/app/src/main/AndroidManifest.xml
+++ b/AppSource/project_raco/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="project_raco"
+        android:label="Project Raco"
         android:name="${applicationName}"
         android:icon="@mipmap/logo">
         <activity
