--- a/AppSource/project_raco/pubspec.yaml
+++ b/AppSource/project_raco/pubspec.yaml
@@ -6,20 +6,25 @@ version: 0.1.0
 environment:
   sdk: ^3.9.0
 
-
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.20.2
+  
   process_run: ^0.12.0
   flutter_lints: ^4.0.0
   dynamic_color: ^1.7.0
   url_launcher: ^6.3.1
-  shared_preferences: ^2.2.2
-  image_picker: ^1.0.7
-  font_awesome_flutter: ^10.10.0
+  intl: ^0.20.2
+  shared_preferences: ^2.2.3
+  image_picker: ^1.1.2
+  font_awesome_flutter: ^10.7.0
+  image_cropper: ^9.1.0
+  permission_handler: ^11.3.1
+  flutter_downloader: ^1.11.1
+  path_provider: ^2.1.3
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
