--- a/AppSource/project_raco/pubspec.yaml
+++ b/AppSource/project_raco/pubspec.yaml
@@ -12,19 +12,20 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   
-  process_run: ^0.12.0
-  flutter_lints: ^4.0.0
   dynamic_color: ^1.7.0
-  url_launcher: ^6.3.1
-  intl: ^0.20.2
-  shared_preferences: ^2.2.3
-  image_picker: ^1.1.2
-  font_awesome_flutter: ^10.7.0
-  image_cropper: ^9.1.0
-  permission_handler: ^11.3.1
   flutter_downloader: ^1.11.1
-  path_provider: ^2.1.3
+  flutter_lints: ^4.0.0
+  font_awesome_flutter: ^10.7.0
+  image: ^4.2.0 
+  image_cropper: ^9.1.0
+  image_picker: ^1.1.2
+  intl: ^0.20.2
   path: ^1.9.0
+  path_provider: ^2.1.3
+  permission_handler: ^11.3.1
+  process_run: ^0.12.0
+  shared_preferences: ^2.2.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
