--- a/AppSource/project_raco/pubspec.yaml
+++ b/AppSource/project_raco/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   process_run: ^0.12.0
   shared_preferences: ^2.2.3
   url_launcher: ^6.3.1
+  open_file: ^3.5.10
 
 dev_dependencies:
   flutter_test:
