--- a/AppSource/project_raco/pubspec.yaml
+++ b/AppSource/project_raco/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^2.2.3
   url_launcher: ^6.3.1
   open_file: ^3.5.10
+  xterm: ^4.0.0
 
 dev_dependencies:
   flutter_test:
